# omni

./: .gitignore  Cargo.toml  \
base/: Cargo.toml
base/src/abi/: mod.rs
base/src/types/: route.rs
base/src/types/http/: mod.rs
cli/src/: command.h  ctx.h  flag.h
compiler/: Cargo.toml
compiler/src/: ast.rs  ctx.rs  main.rs  treemap.rs
compiler/src/languages/: adapter.rs  find_calls.scm  go.rs  mod.rs  rust.rs
compiler/src/route/: mod.rs
compiler/src/router/: mod.rs
compiler/src/router/generate/: mod.rs  tree.rs
compiler/src/router/generate/format/: rs.rs
compiler/src/router/generate/stack/: mod.rs
compiler/src/router/pass/: length.rs  method.rs  mod.rs  segcount.rs
compiler/src/router/tree/: condition.rs  mod.rs  pass.rs
compiler/test/helloworld/: router.rs
compiler/test/helloworld/src/routes/: get.go
compiler/test/helloworld/src/routes/test/: get.go  post.go
compiler/test/helloworld/src/routes/test/test2/: get.go  middleware.go
core/src/: lib.rs
core/src/types/: context.rs  mod.rs
core/src/types/http/: mod.rs
router/: Cargo.toml
router/src/: executer.rs  handle.rs  main.rs
