[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
im = "15.1.0"
tree-sitter = "0.26.6"
tree-sitter-go = "0.25.0"
dyn-clone = "1"
const_env = "0.1.5"
ptree = "0.5"
log = "0.4"
env_logger = "0.11"
bimap = "0.6.3"
sha3 = "0.11.0"
const-hex = "1.18.1"
chrono = "0.4.44"
bitflags = "2.11.0"
ulid = "1.2.1"
strum = { version = "0.28.0", features = ["derive"] }
base = { path = "../base" }
